[package]
name = "activity_bot"
version = "0.1.0"
authors = ["Arseny Shishaev <ashishae@student.42.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde_json = "1"
